--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,20 @@
     <groupId>TOMCAT2</groupId>
     <artifactId>CRUD2</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.10</source>
+                    <target>1.10</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     
 
     <dependencies>
